--- a/extension/public/css/settings.scss
+++ b/extension/public/css/settings.scss
@@ -96,8 +96,6 @@
                     max-height: -moz-available;
                     transition: none;
                     outline: none;
-                    // Thin scrollbar
-                    scrollbar-width: thin;
                 }
                 & > button {
                     margin-top: 0.5rem;
